removing prototype, including jquery

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 		<%= stylesheet_link_tag 'base' -%>
 		<!--[if IE 7]><%= stylesheet_link_tag 'ie7' -%><![endif]-->
 		<!--[if IE 8]><%= stylesheet_link_tag 'ie8' -%><![endif]-->
-		<%#= google_jquery %>
-		<%#= javascript_include_tag 'facebox', 'jquery-curvycorners-pack', 'jquery.plugins', 'application' -%>
+		<%= google_jquery %>
+		<%#= javascript_include_tag 'facebox', 'jquery.plugins', 'application' -%>
 		<%= yield :head %>
 	</head>
 	<body>
