--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,11 @@
     <meta name="keywords" content="ritzy lunch, the ritzy, ritzy, hotdogs, antonio selario, clarksburg, west virginia, wv" />
     <meta name="description" content="The Ritzy Lunch" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<%= stylesheet_link_tag 'base' -%>
+		<%= stylesheet_link_tag 'base', 'facebox', 'application' -%>
 		<!--[if IE 7]><%= stylesheet_link_tag 'ie7' -%><![endif]-->
 		<!--[if IE 8]><%= stylesheet_link_tag 'ie8' -%><![endif]-->
 		<%= google_jquery %>
-		<%#= javascript_include_tag 'facebox', 'jquery.plugins', 'application' -%>
+		<%= javascript_include_tag 'facebox', 'jquery.plugins', 'application' -%>
 		<%= yield :head %>
 	</head>
 	<body>
