--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 	  <div id="hdr" class="wrapper">
-	    
+	    <%= link_to image_tag('ritzy-lunch.png'), root_path %>
 	  </div>
 	  <div id="content" class="wrapper">
 	    <div class="inner">
