adding controllers and infrastructure

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 	</head>
 	<body>
 	  <div id="hdr" class="wrapper">
+	    <%= navigation :header %>
 	    <%= link_to image_tag('ritzy-lunch.png'), root_path %>
 	  </div>
 	  <div id="content" class="wrapper">
