--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -48,10 +48,20 @@ body, html {
   box-shadow: 0px 3px 6px #ddd;
   margin-bottom: 25px;
   padding: 4px;
+  position: relative;
 }
 #content .inner {
   border: 3px double #EFECE5;
   padding: 25px;
+}
+#content #stamp {
+  position: absolute;
+  top: 13px;
+  right: 0;
+  font-size: 18px;
+  color: #999;
+  text-align: center;
+  width: 285px;
 }
 #sidebar {
   float: right;
@@ -59,7 +69,7 @@ body, html {
 }
 #sidebar .body {
   width: 250px;
-  padding: 20px;
+  padding: 5px 20px 20px 20px;
   margin-right: -45px;
   background: #eee;
   border: 5px solid #ddd;
@@ -78,4 +88,16 @@ body, html {
 #sidebar .top {
   height: 11px;
   background: url(../images/sidebar-corner.png) no-repeat right top;
+}
+#sidebar .polaroid {
+  text-align: center;
+  background: url(../images/polaroid-bg.png) no-repeat center top;
+  margin: 0 -15px;
+  height: 284px;
+  padding-top: 17px;
+}
+#sidebar .polaroid p {
+  line-height: 170%;
+  color: #777;
+  font-size: 13px;
 }
