--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,8 @@
 	    </div>
 	  </div>
 	  
-	  <div id="ftr" class="wrapper">
-	    <p class="left">456 West Pike Street<br />Clarksburg, WV 26301</p>
+	  <div id="ftr" class="wrapper rounded">
+	    <p class="left">Ritzy Lunch Hot Dogs LLC<br /><%= link_to 'Site Management' %></p>
 	    <p class="right">Antonio B. Selario, Owner<br />Phone (304) 622-3600</p>
 	    <div class="clearfix"></div>
 	  </div>
