spiced up the navigation a bit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 		<%= yield :head %>
 	</head>
 	<body>
+	  <div id="strip"></div>
+	  
 	  <div id="hdr" class="wrapper">
 	    <%= navigation :header %>
 	    <%= link_to image_tag('logo.png'), root_path %>
