added jquery-flickr stuff with facebox popups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 		<!--[if IE 7]><%= stylesheet_link_tag 'ie7' -%><![endif]-->
 		<!--[if IE 8]><%= stylesheet_link_tag 'ie8' -%><![endif]-->
 		<%= google_jquery %>
-		<%= javascript_include_tag 'facebox', 'jquery.plugins', 'application' -%>
+		<%= javascript_include_tag 'facebox', 'jflickrfeed.min', 'jquery.plugins', 'application' -%>
 		<%= yield :head %>
 	</head>
 	<body>
