--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,10 +47,12 @@
 	  <div id="ftr" class="wrapper rounded">
 	    <p class="left">
 	      <strong>Ritzy Lunch Hot Dogs LLC</strong><br />
-	      by <%= link_to 'Formed Function LLC', 'http://www.formedfunction.com', :rel => 'external' %>
-	      | <%= link_to 'Site Management', new_session_path, :id => 'admin-link' %>
+	      by <%= link_to 'Formed Function LLC', 'http://www.formedfunction.com', :rel => 'external' %> |
 	      <% if logged_in? %>
-	      | <%= link_to 'Logout', logout_path %>
+	        <%= link_to 'Site Management', admin_base_index_path %>
+	        | <%= link_to 'Logout', logout_path %>
+	      <% else %>
+	        <%= link_to 'Site Management', new_session_path, :id => 'admin-link' %>
 	      <% end %>
 	    </p>
 	    <p class="right">Antonio B. Selario, Owner<br />Phone (304) 622-3600</p>
