--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Base#index</h1>
-<p>Find me in app/views/admin/base/index.html.erb</p>
+<%= title "Administrative Options" %>
+
+<ul>
+  <li><%= link_to 'Manage Users', admin_users_path %></li>
+  <li><%= link_to 'Update About Ritzy Lunch Content', edit_admin_about_path(About.only) %>
+</ul>
