--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -73,3 +73,6 @@ p {
   color: #333;
   font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
 }
+.tright {
+  text-align: right;
+}
