--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,10 @@
 	          </div>
 	          
 	          <h3>Recent Announcements</h3>
+	          <p class="soft">Sorry, there aren't any announcements to list just yet.</p>
 	          
 	          <h3>Contact Us</h3>
-	          <p class="contact">
+	          <p class="soft">
     	        Do you need to get in touch with us? Feel free to
     	        call us at (304) 622-3600 or <%= link_to 'send us an email', 'mailto:ritzylunchwv@gmail.com' %>.
     	      </p>
