--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -185,7 +185,7 @@ div.divider {
   font-size: 13px;
   font-family: helvetica, arial;
 }
-#sidebar p.contact {
+#sidebar p.soft {
   font-size: 14px;
   font-family: helvetica, arial;
   color: #666;
