--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
 
 <div class="divider"></div>
 
-<div id="bikenight">
+<div id="bikenight" class="photos">
   <%= subtitle "Thursday Bike Night" %>
   
   <p>
@@ -28,8 +28,8 @@
   
   <p>Below are a few photos from Bike Night. Enjoy!</p>
   
-  <ul class="flickr"></ul>
-  <div id="flickr-loading">
+  <ul class="flickr bikenight"></ul>
+  <div class="inline-loading">
     <p>
       Loading Photos... <%= image_tag 'inline-loading.gif' %>
     </p>
