base support for testimonials

--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -2,5 +2,6 @@
 
 <ul>
   <li><%= link_to 'Manage Users', admin_users_path %></li>
-  <li><%= link_to 'Update About Ritzy Lunch Content', edit_admin_about_path(About.only) %>
+  <li><%= link_to 'Update About Ritzy Lunch Content', edit_admin_about_path(About.only) %></li>
+  <li><%= link_to 'Testimonials', admin_testimonials_path %></li>
 </ul>
