--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,14 @@
 	  <div id="hdr" class="wrapper">
 	    <%= navigation :header %>
 	    <%= link_to image_tag('logo.png'), root_path %>
+	    
+	    <div id="testimonial" class="tright">
+	      <p>
+	        "The best chili dogs in the business! The Ritzy definitely gets two
+	        thumbs up from me."
+	        <span><%= link_to 'More Testimonials &#187;', testimonials_path %></span>
+	      </p>
+	    </div>
 	  </div>
 	  
 	  <div id="content" class="wrapper">
