--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -112,6 +112,32 @@ body, html {
   float: left;
   width: 515px;
 }
+#map {
+  height: 300px;
+  border: 3px solid #999;
+}
+.gmnoprint h4 {
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.gmnoprint p {
+  font-size: 13px;
+  font-family: helvetica;
+  line-height: 130%;
+  margin-bottom: 0;
+}
+#directions div {
+  color: #888;
+  font-size: 12px;
+}
+#directions td,
+#directions td div {
+  color: #444;
+  font-size: 14px;
+  line-height: 130%;
+}
 h1.title {
   font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
   font-size: 35px;
