--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -270,6 +270,24 @@ input.text {
   font-size: 16px;
   width: 75%;
 }
+table.inline {
+  width: 100%;
+}
+table.inline td {
+  padding-right: 10px;
+}
+table.inline td.city {
+  width: 60%;
+}
+table.inline td.state {
+  width: 12%;
+}
+table.inline td.zip {
+  width: 28%;
+}
+table.inline input.text {
+  width: 95%;
+}
 p.submission {
   border-top: 3px double #ddd;
   padding-top: 5px;
