--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -293,6 +293,16 @@ p.submission {
   padding-top: 5px;
   margin-top: 10px;
 }
+#menu {
+  background: url(../images/menu-bg.png) no-repeat -23px top;
+  padding: 20px 18px 0 20px;
+}
+#menu .body {
+  height: 500px;
+  background: #fdfbed;
+  border: 1px solid #f7f4dd;
+  padding: 20px;
+}
 #ftr {
   background: #F3F0E9;
   padding: 10px 5px;
