--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -4,4 +4,6 @@
   <li><%= link_to 'Manage Users', admin_users_path %></li>
   <li><%= link_to 'Update About Ritzy Lunch Content', edit_admin_about_path(About.only) %></li>
   <li><%= link_to 'Testimonials', admin_testimonials_path %></li>
+  <li><%= link_to 'Menu Categories', admin_menu_categories_path %></li>
+  <li><%= link_to 'Menu Items', admin_menu_items_path %></li>
 </ul>
