--- a/public/stylesheets/flash.css
+++ b/public/stylesheets/flash.css
@@ -11,6 +11,7 @@ p.error {
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
+  font-family: helvetica, arial;
 }
 
 p.notice span,
