--- a/app/views/admin/menu_items/index.html.erb
+++ b/app/views/admin/menu_items/index.html.erb
@@ -1,5 +1,7 @@
 <%= title "Menu Items" %>
 
+<%= link_to 'New', new_admin_menu_item_path %>
+
 <% unless @menu_items.blank? %>
   <% list do %>
     <% @menu_items.each do |item| %>
