now have working announcements and a few other tweaks

--- a/app/views/admin/base/index.html.erb
+++ b/app/views/admin/base/index.html.erb
@@ -6,4 +6,5 @@
   <li><%= link_to 'Testimonials', admin_testimonials_path %></li>
   <li><%= link_to 'Menu Categories', admin_menu_categories_path %></li>
   <li><%= link_to 'Menu Items', admin_menu_items_path %></li>
+  <li><%= link_to 'Announcements', admin_announcements_path %></li>
 </ul>
